# meshtastic-matrix-relay

./: .bandit.yaml  .coderabbit.yml  .gitignore  AGENTS.md  Dockerfile  Dockerfile.android  INSTRUCTIONS.md  MANIFEST.in  MMR_SHUTDOWN_FIX_UPDATED_PR.md  Makefile  PLUGIN_SYSTEM_PLAN.md  PR_SUMMARY_TEMP.md  README.md  SECURITY_ENHANCEMENT_PROJECT.md  TEMP_PR_SUMMARY.md  TEST_DEDUPLICATION_PROGRESS.md  TEST_DEDUPLICATION_TRACKING.md  codecov.yml  coderabbit_actionable_items.md  config.py  db_utils.py  log_utils.py  main.py  matrix_utils.py  meshtastic_utils.py  mmrelay.iss  mypy.ini  osv-scanner.toml  pr_summary.md  pyproject.toml  pyrightconfig.json  pytest.ini  renovate.json  requirements.txt  sample_config.yaml  setup.cfg  setup.py  temp_pr_summary.md  test_runtime_no_errors.py
.agentgrunt/: README_ai.md  memory.md
.agor/: memory.md
.agor/snapshots/: 2024-12-27_CLI-INTEGRATION-COMPLETE_e2ee-implementation-final_snapshot.md  2024-12-27_COMPREHENSIVE-E2EE-IMPLEMENTATION-COMPLETE_handoff-ready_snapshot.md  2024-12-27_config-updates_pre-main-integration_snapshot.md  2024-12-27_e2ee-analysis_integration-plan_snapshot.md  2024-12-27_initial-state_e2ee-port-start_snapshot.md  2024-12-27_main-integration_e2ee-complete_snapshot.md  2024-12-27_nio-docs-review_critical-fixes-needed_snapshot.md  2024-12-27_nio-fixes-complete_proper-e2ee-implementation_snapshot.md  2025-05-28_CLI-INTEGRATION-COMPLETE_e2ee-implementation-final_snapshot.md  2025-05-28_DEBUGGING-MEGOLM-IMPORT-FIX_handoff-ready_snapshot.md  fix-missing-reactions-case-2025-06-23.md
.devcontainer/: devcontainer.json
.github/workflows/: build-android-apk.yml  build-android.yml  build-armv7-builder-image.yml  build-pyz-armv7.yml  cross-mesh-integration.yml  docker-publish.yml  docker-validate.yml  full-test-suite.yml  helm-lint.yml  lint-container-paths.yml  main.yml  meshtasticd-integration.yml  package-windows.yml  post-release-version-bump.yml  pypi-publish.yml  realistic-integration.yml  release-gate.yml  test-and-coverage.yml
.ralphy/: .gitignore  config.yaml
.trunk/: trunk  trunk.yaml
.trunk/configs/: .isort.cfg  ruff.toml
android/: README.md  build.gradle  gradlew  settings.gradle
android/app/: build.gradle
android/config/detekt/: detekt.yml
deploy/helm/mmrelay/: Chart.yaml  values.yaml
deploy/k8s/: deployment.yaml  kustomization.yaml  networkpolicy.yaml  pvc.yaml
docs/: ADVANCED_CONFIGURATION.md  Community-Plugin-Development-Guide.md  DOCKER.md  E2EE.md  EXTRA_CONFIGURATION.md  GPXTracker.py  HELM.md  INSTRUCTIONS.md  KUBERNETES.md  MIGRATION_1.3.md  PYZ_BUILDS.md  README.md  RELEASE_1.3.md  WHATS_NEW_1.2.md  WHATS_NEW_1.3.md  WHATS_NEW_1.4.md  docker-compose.yml  example_plugin.py  uptime_plugin.py
docs/dev/: 2026-04-10-remove-credentials-store-path-configurability.md  BLE_DUAL_LIBRARY_COMPATIBILITY.md  DATA_LAYOUT_MIGRATION.md  E2EE_IMPLEMENTATION_NOTES.md  INNO_SETUP_GUIDE.md  MATRIX_DUAL_LIBRARY_COMPATIBILITY_PLAN.md  MMRELAY_BLE_FOLLOWUP.md  PLUGIN_SYSTEM_AUDIT.md  RADIO_BACKEND_DECOUPLING.md  TESTING_GUIDE.md  UPGRADE_TEST_EXECUTION_CHECKLIST.md  UPGRADE_TEST_PLAN.md  V1_3_DIRECTORY_REDESIGN.md  V1_3_MIGRATION_IMPROVEMENTS_PLAN.md  android_chaquopy_integration_experiment.md  cli-restructure.md  database-modernization-plan.md  matrix_utils_decomposition_plan.md  meshtastic_packet_routing_policy.md  meshtastic_utils_decomposition_plan.md  plugin_critical_issues_plan.md
docs/dev/archive/: DATA_LAYOUT_MIGRATION.md  E2EE_IMPLEMENTATION_NOTES.md  MIGRATION_1.3.md  WHATS_NEW_1.3.md
docs/superpowers/specs/: 2026-05-03-test-suite-modernization-design.md
k8s/: README.md  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml.example
mmrelay/: __init__.py  __main__.py  cli.py  config.py  db_utils.py  entry.py  log_utils.py  main.py  matrix_utils.py  meshtastic_utils.py  path_utils.py  plugin_loader.py
mmrelay/plugins/: base_plugin.py
plugins/: health_plugin.py  map_plugin.py  weather_plugin.py
scripts/: debug_e2ee.py  mmrelay.iss  test_e2ee_integration.py
scripts/ci/: check_container_paths.sh  helm_render_validate.sh  kube-linter-config.yaml  run-mmrelay-meshtasticd-integration.sh  run-mmrelay-realistic-integration-cross-mesh.sh  run-mmrelay-realistic-integration.sh  validate_release_version.py
src/mmrelay/: __init__.py  __main__.py  _version.py  async_db_pool.py  async_db_utils.py  cli.py  cli_utils.py  config.py  config_checker.py  constants.py  db_maintenance.py  db_pool.py  db_runtime.py  db_utils.py  e2ee_utils.py  k8s_utils.py  log_utils.py  main.py  matrix_utils.py  meshtastic_utils.py  message_queue.py  migrate.py  path_utils.py  paths.py  plugin_loader.py  runtime_utils.py  setup_utils.py  windows_utils.py
src/mmrelay/android/: __init__.py  android_config.py
src/mmrelay/common/: sys_utils.py  text_utils.py
src/mmrelay/constants/: __init__.py  app.py  auth.py  cli.py  commands.py  config.py  database.py  domain.py  formats.py  messages.py  migration.py  network.py  plugins.py  queue.py
src/mmrelay/example_plugins/: __init__.py  hello_world.py
tests/: _plugin_loader_helpers.py  _test_main_helpers.py  ble_cleanup.py  conftest.py  constants.py  helpers.py  mocks.py  sqlite_provenance.py  test_android_config.py  test_async_db_pool.py  test_async_db_utils.py  test_async_patterns.py  test_auth_flow_fixes.py  test_base_plugin.py  test_cli.py  test_cli_coverage.py  test_cli_diagnose.py  test_cli_edge_cases.py  test_cli_exception_logging.py  test_cli_health_check_coverage.py  test_cli_paths.py  test_cli_system_health_coverage.py  test_cli_targeted.py  test_cli_utils.py  test_cli_utils_coverage.py  test_cli_windows_integration.py  test_command_bridge_channel_validation.py  test_config.py  test_config_checker.py  test_config_edge_cases.py  test_constants.py  test_core_utils_coverage.py  test_coverage_gaps.py  test_db_pool.py  test_db_runtime.py  test_db_runtime_del_coverage.py  test_db_runtime_security.py  test_db_utils.py  test_db_utils_async.py  test_db_utils_close_manager_coverage.py  (+158 more)
tests/mmrelay/: test_matrix_utils.py  test_meshtastic_utils.py
tools/: build_pyz.sh
(+98 files in other folders)
