[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmrelay"
version = "1.3.8"
description = "Bridge between Meshtastic mesh networks and Matrix chat rooms"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Geoff Whittington" }, { name = "Jeremiah K." }]
maintainers = [{ name = "Jeremiah K.", email = "jeremiahk@gmx.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Topic :: Communications",
]
dependencies = [
  "mtjk==2.7.11.post2",
  "Pillow==12.3.0",
  "aiohttp==3.14.3",
  "mindroom-nio==0.29.0",
  "matplotlib==3.10.9",
  "requests==2.34.2",
  "markdown==3.10.2",
  "nh3==0.3.6",
  "haversine==2.9.0",
  "schedule==1.2.2",
  "platformdirs==4.11.0",
  "py-staticmaps==0.5.0",
  "psutil==7.2.2",
  "rich==15.0.0",
]

[project.optional-dependencies]
e2e = ["mindroom-nio[e2e]==0.29.0"]
test = [
  "coverage==7.15.2",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "pytest-asyncio==1.4.0",
  "pytest-env==1.7.0",
  "pytest-timeout==2.4.0",
]
dev = [
  "mypy==2.3.0",
  "pyright==1.1.411",
  "types-PyYAML==6.0.12.20260518",
  "types-Markdown==3.10.2.20260712",
  "types-jsonschema==4.26.0.20260518",
]

[project.urls]
Homepage = "https://github.com/jeremiah-k/meshtastic-matrix-relay"
Repository = "https://github.com/jeremiah-k/meshtastic-matrix-relay"
Issues = "https://github.com/jeremiah-k/meshtastic-matrix-relay/issues"

[project.scripts]
mmrelay = "mmrelay.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mmrelay.tools" = ["*.yaml", "*.service", "*.env"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.py[cod]"]

[tool.bumpversion]
current_version = "1.3.8"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
commit = false
tag = false
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "\nversion = \"{current_version}\""
replace = "\nversion = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'
