[metadata]
name = mmrelay
version = 0.1.0
description = Meshtastic Matrix Relay
author = AgentGrunt
author_email = grunt@agentgrunt.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-repo-url
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
install_requires =
    meshtastic
    nio
    pyyaml
    pillow
    # Add more dependencies as needed
python_requires = >=3.8

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    mmrelay = mmrelay.main:main